--- a/index.html
+++ b/index.html
@@ -178,7 +178,9 @@
 
                 <div class="widget">
                     <h3><i class="fas fa-tools"></i> Troubleshooting</h3>
-                    <p>If the API is not working, you can manually paste JSON data:</p>
+                    <div class="alert alert-warning">
+                        <strong>API Issue Detected:</strong> The game access token is not being sent through the proxy. Use manual data input below.
+                    </div>
                     <div class="token-form">
                         <textarea id="manualDataInput" placeholder="Paste miners JSON data here..." rows="4"></textarea>
                         <button id="loadManualDataBtn" class="btn btn-secondary">
@@ -187,12 +189,16 @@
                     </div>
                     <div class="troubleshooting-info">
                         <small>
-                            <strong>How to get data:</strong><br>
-                            1. Open browser dev tools (F12)<br>
-                            2. Go to Network tab<br>
-                            3. Visit cqg.critters.quest<br>
-                            4. Find the miners API call<br>
-                            5. Copy the response JSON
+                            <strong>Step-by-step instructions:</strong><br>
+                            1. Open a new tab and go to <a href="https://cqg.critters.quest" target="_blank">cqg.critters.quest</a><br>
+                            2. Log in to your account<br>
+                            3. Open Developer Tools (F12)<br>
+                            4. Go to the <strong>Network</strong> tab<br>
+                            5. Refresh the page or navigate around<br>
+                            6. Look for a request to <code>/api/mining/miners</code><br>
+                            7. Click on it and go to the <strong>Response</strong> tab<br>
+                            8. Copy the entire JSON response<br>
+                            9. Paste it in the textarea above and click "Load Data"
                         </small>
                     </div>
                 </div>
