--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                     <div class="troubleshooting-info">
                         <small>
                             <strong>Step-by-step instructions:</strong><br>
-                            1. Open a new tab and go to <a href="https://cqg.critters.quest" target="_blank">cqg.critters.quest</a><br>
+                            1. Open a new tab and go to <a href="https://beta.critters.quest" target="_blank">beta.critters.quest</a><br>
                             2. Log in to your account<br>
                             3. Open Developer Tools (F12)<br>
                             4. Go to the <strong>Network</strong> tab<br>
@@ -219,6 +219,7 @@
                     <h3><i class="fas fa-info-circle"></i> About</h3>
                     <p>This tracker monitors upcoming lootable plots in Critter Quest. Data is refreshed every 30 minutes.</p>
                     <p><strong>Source:</strong> cqg.critters.quest</p>
+                    <p><strong>Game Login:</strong> beta.critters.quest</p>
                 </div>
             </div>
         </div>
