--- a/index.html
+++ b/index.html
@@ -177,28 +177,17 @@
                 </div>
 
                 <div class="widget">
-                    <h3><i class="fas fa-tools"></i> Troubleshooting</h3>
-                    <div class="alert alert-warning">
-                        <strong>API Issue Detected:</strong> The game access token is not being sent through the proxy. Use manual data input below.
-                    </div>
-                    <div class="token-form">
-                        <textarea id="manualDataInput" placeholder="Paste miners JSON data here..." rows="4"></textarea>
-                        <button id="loadManualDataBtn" class="btn btn-secondary">
-                            <i class="fas fa-upload"></i> Load Data
-                        </button>
-                    </div>
+                    <h3><i class="fas fa-tools"></i> Get Game Token</h3>
                     <div class="troubleshooting-info">
                         <small>
-                            <strong>Step-by-step instructions:</strong><br>
-                            1. Open a new tab and go to <a href="https://beta.critters.quest" target="_blank">beta.critters.quest</a><br>
+                            <strong>To get your game token:</strong><br>
+                            1. Go to <a href="https://beta.critters.quest" target="_blank">beta.critters.quest</a><br>
                             2. Log in to your account<br>
                             3. Open Developer Tools (F12)<br>
-                            4. Go to the <strong>Network</strong> tab<br>
-                            5. Refresh the page or navigate around<br>
-                            6. Look for a request to <code>/api/mining/miners</code><br>
-                            7. Click on it and go to the <strong>Response</strong> tab<br>
-                            8. Copy the entire JSON response<br>
-                            9. Paste it in the textarea above and click "Load Data"
+                            4. Go to <strong>Application</strong> → <strong>Cookies</strong><br>
+                            5. Find <code>gameAccessToken</code><br>
+                            6. Copy the entire token value<br>
+                            7. Paste it in the Token Management section above
                         </small>
                     </div>
                 </div>
